---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/statements/match/as_pattern_4.py
---
## AST

```
Module(
    ModModule {
        range: 0..187,
        body: [
            Match(
                MatchStmt {
                    range: 0..186,
                    subject: Name(
                        NameExpr {
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 156..186,
                            pattern: MatchMapping(
                                PatternMatchMapping {
                                    range: 161..172,
                                    keys: [
                                        Name(
                                            NameExpr {
                                                range: 162..163,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        Name(
                                            NameExpr {
                                                range: 167..168,
                                                id: Name("y"),
                                                ctx: Store,
                                            },
                                        ),
                                    ],
                                    patterns: [
                                        MatchAs(
                                            PatternMatchAs {
                                                range: 164..166,
                                                pattern: None,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("as"),
                                                        range: 164..166,
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchValue(
                                            PatternMatchValue {
                                                range: 170..171,
                                                value: NumberLiteral(
                                                    NumberLiteralExpr {
                                                        range: 170..171,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    rest: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Pass(
                                    PassStmt {
                                        range: 182..186,
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
2 |     # This `as` pattern is unparenthesized so the parser never takes the path
3 |     # where it might be confused as a mapping key pattern.
4 |     case {x as y: 1}:
  |           ^ Syntax Error: Invalid mapping pattern key
5 |         pass
  |


  |
2 |     # This `as` pattern is unparenthesized so the parser never takes the path
3 |     # where it might be confused as a mapping key pattern.
4 |     case {x as y: 1}:
  |             ^^ Syntax Error: Expected ':', found 'as'
5 |         pass
  |


  |
2 |     # This `as` pattern is unparenthesized so the parser never takes the path
3 |     # where it might be confused as a mapping key pattern.
4 |     case {x as y: 1}:
  |                ^ Syntax Error: Expected ',', found name
5 |         pass
  |
